# Goob

./: .env.example  .gitignore  README.md  goob_brain.ino  pyproject.toml
arduino/braccio_serial/: braccio_serial.ino
src/: arm.py  bot.py  camera.py  config.py  llm.py  main.py  voice.py
tests/: test_arm_smoke.py  test_camera_smoke.py  test_llm_smoke.py  test_voice_smoke.py
